apps/sample-api/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-canary
spec:
  selector:
    app: sample-api
  ports:
    - name: http
      port: 80
      targetPort: http
