apps/sample-api/base/service-root.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-root
spec:
  selector:
    app: sample-api
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 8080
      targetPort: http
